# Authentication-Backend-TechConnect

./: .env.template  Dockerfile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_10_27_0236-64611ed177d8_init.py
bot/: pyproject.toml
bot/alembic/: env.py
bot/src/: database.py  settings.py
src/: app.py  dao.py  settings.py
src/auth/: dao.py  routers.py  schemas.py  utils.py
src/auth/services/: auth.py  jwt.py  user.py
src/auth/templates/: login.html  profile.html  register.html
src/email/: service.py
src/otp/: service.py
src/sms/: service.py
web/: pyproject.toml
web/alembic/: env.py
web/alembic/versions/: 2024_10_21_2353-473978ff52be_initial.py  2024_10_22_2334-e3dbec4f5e22_initial.py  2024_10_23_1258-f3f0e6b7e786_initial.py  2024_10_23_1644-9253a4cdd498_temp_user.py  2024_10_23_1822-6f43591c565a_temp_user.py  2024_10_26_0346-afeb2d8d5336_init.py
web/src/: __main__.py  app.py  dao.py  models.py  settings.py
web/src/auth/: dao.py  models.py  routers.py  schemas.py  services.py  test.py  utils.py
web/src/auth/services/: auth.py  jwt.py  login.py  user.py
web/src/auth/templates/: register.html
web/src/email/: service.py
web/src/otp/: service.py
web/src/sms/: service.py
